k8s/traefik-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-color-prefix
  namespace: ingress
spec:
  stripPrefix:
    prefixes:
      - /green
      - /blue
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: ingress
spec:
  redirectScheme:
    scheme: https
    permanent: true
