k8s/traefik-sentiment-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sentiment-routes
  namespace: ingress
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/green/`)
      kind: Rule
      priority: 200
      middlewares:
        - name: strip-color-prefix
          namespace: ingress
      services:
        - kind: Service
          name: sentiment-api
          namespace: dev-green
          port: 80    

    - match: PathPrefix(`/blue/`)
      kind: Rule
      priority: 200
      middlewares:
        - name: strip-color-prefix
          namespace: ingress
      services:
        - kind: Service
          name: sentiment-api
          namespace: dev-blue
          port: 80

    - match: PathPrefix(`/`)
      kind: Rule
      priority: 100
      services:
        - kind: TraefikService
          name: sentiment-prod-weighted
          namespace: ingress
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sentiment-production
  namespace: ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`demourlisd.one`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: TraefikService
          name: sentiment-prod-weighted
          namespace: ingress
      middlewares:
        - name: https-redirect

    - match: HostRegexp(`{host:[a-z0-9.-]+.demourlisd.one`) && PathPrefix(`/`)
      kind: Rule
      services:
       - kind: TraefikService
         name: sentiment-prod-weighted
         namespace: ingress
      middlewares:
        - name: https-redirect

  tls:
    certResolver: letsencrypt
    domains:
      - main: demourlisd.one
        sans:
          - '*.demourlisd.one'
